Track whether the terminal canvas is visible to enable/disable the map
Using a component to check whether the canvas is enabled should allow us to detect whether other mods are forcing the terminal to remain visible.

--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Patches\PatchTerminal.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TerminalVisibilityTracker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
