--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Patches\PatchPlayerControllerB.cs" />
     <Compile Include="Patches\PatchRadarBoosterItem.cs" />
     <Compile Include="Patches\PatchTerminal.cs" />
+    <Compile Include="Patches\Reflection.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TerminalVisibilityTracker.cs" />
