Add an opt-in feature to allow zooming out the terminal's radar map
There are three config options that govern this feature under the `Zoom` category:
- `Enabled`: Defaults to false, can be enabled to allow the commands and related options to take effect.
- `Sizes`: A list of values representing the field of vision that each zoom level should have.
- `DefaultLevel`: The index into the Sizes that should be used initially and when resetting the zoom.

There are a few new commands:
- `zoom` will cycle through the zoom levels that are configured, looping back when reaching the end.
- `zoom in` will go towards and stop at the lowest index of the sizes list.
- `zoom out` will go towards and stop at the highest index of the sizes list.
- `reset zoom` will set the zoom level to the value of `Zoom.DefaultLevel`.

The feature is disabled by default to preserve a semi-vanilla experience, since zooming out enables viewing more of the map than normal.

Fixes #1

--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -76,6 +76,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands.cs" />
     <Compile Include="Patches\Common.cs" />
     <Compile Include="Patches\PatchManualCameraRenderer.cs" />
     <Compile Include="Patches\PatchPlayerControllerB.cs" />
