--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
@@ -21,6 +21,10 @@
     <ItemGroup>
         <Reference Include="Assembly-CSharp" Publicize="true">
             <HintPath>..\..\Libraries\Assembly-CSharp.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
+        <Reference Include="OpenBodyCams">
+            <HintPath>..\..\Libraries\OpenBodyCams.dll</HintPath>
             <Private>false</Private>
         </Reference>
         <Reference Include="Unity.Netcode.Runtime">
