--- a/TwoRadarMaps/Package/manifest.json
+++ b/TwoRadarMaps/Package/manifest.json
@@ -1,6 +1,7 @@
 {
     "name": "TwoRadarMaps",
-    "version_number": "1.2.2",
+    "author": "Zaggy1024",
+    "version_number": "1.2.3",
     "website_url": "https://github.com/Zaggy1024/LC_TwoRadarMaps/",
     "description": "Monitor different players' radar at the main monitor and the terminal simultaneously.",
     "dependencies": [
