Rework radar booster compatibility, apply it to ImmersiveCompany
Fixes an issue where the map screen will appear blank upon loading into a save with ImmersiveCompany's radar booster changes enabled.

--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -27,6 +27,10 @@
             <HintPath>..\..\Libraries\EnhancedRadarBooster.dll</HintPath>
             <Private>false</Private>
         </Reference>
+        <Reference Include="ImmersiveCompany" Publicize="true">
+            <HintPath>..\..\Libraries\ImmersiveCompany_patched.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
         <Reference Include="OpenBodyCams">
             <HintPath>..\..\Libraries\OpenBodyCams.dll</HintPath>
             <Private>false</Private>
