Use <Copy> in the project file to copy assets to the package folder

--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -69,12 +69,9 @@
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
-    <PropertyGroup>
-        <PostBuildEvent>
-            mkdir $(MSBuildProjectDirectory)\Package
-            copy /Y $(SolutionDir)README.md $(MSBuildProjectDirectory)\Package
-            copy /Y $(OutDir)TwoRadarMaps.dll $(MSBuildProjectDirectory)\Package
-        </PostBuildEvent>
-    </PropertyGroup>
+    <Target Name="CopyToPackage" AfterTargets="AfterBuild">
+        <Copy SourceFiles="$(SolutionDir)README.md" DestinationFolder="$(MSBuildProjectDirectory)\Package" />
+        <Copy SourceFiles="$(OutDir)TwoRadarMaps.dll" DestinationFolder="$(MSBuildProjectDirectory)\Package" />
+    </Target>
 
 </Project>
