--- a/TwoRadarMaps/TwoRadarMaps.csproj
+++ b/TwoRadarMaps/TwoRadarMaps.csproj
@@ -5,64 +5,20 @@
         <AssemblyName>TwoRadarMaps</AssemblyName>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>preview</LangVersion>
+        <DebugType>embedded</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Mono.Cecil" Version="0.11.5.0" />
-        <PackageReference Include="BepInEx.BaseLib" Version="5.4.21.0" />
         <PackageReference Include="BepInEx.Core" Version="5.4.21.0" />
         <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all" />
+        <PackageReference Include="LethalCompany.GameLibs.Steam" Version="64.0.0-ngd.0" Private="False" Publicize="true" />
+        <PackageReference Include="Zaggy1024-OpenBodyCams" Version="3.*" Publicize="true" />
+        <PackageReference Include="MrHydralisk-EnhancedRadarBooster" Version="1.7.*" />
+        <PackageReference Include="Regis-ImmersiveCompany" Version="0.3.*" Publicize="true" />
     </ItemGroup>
 
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Assembly-CSharp" Publicize="true">
-            <HintPath>..\..\Libraries\Assembly-CSharp.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="EnhancedRadarBooster" Publicize="true">
-            <HintPath>..\..\Libraries\EnhancedRadarBooster.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="ImmersiveCompany" Publicize="true">
-            <HintPath>..\..\Libraries\ImmersiveCompany_patched.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="OpenBodyCams">
-            <HintPath>..\..\Libraries\OpenBodyCams.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Unity.Netcode.Runtime">
-            <HintPath>..\..\Libraries\Unity.Netcode.Runtime.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="Unity.TextMeshPro">
-            <HintPath>..\..\Libraries\Unity.TextMeshPro.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="UnityEngine">
-            <HintPath>..\..\Libraries\UnityEngine.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="UnityEngine.AnimationModule">
-            <HintPath>..\..\Libraries\UnityEngine.AnimationModule.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="UnityEngine.CoreModule">
-            <HintPath>..\..\Libraries\UnityEngine.CoreModule.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="UnityEngine.UI">
-            <HintPath>..\..\Libraries\UnityEngine.UI.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
-        <Reference Include="UnityEngine.UIModule">
-            <HintPath>..\..\Libraries\UnityEngine.UIModule.dll</HintPath>
-            <Private>false</Private>
-        </Reference>
     </ItemGroup>
 
     <PropertyGroup>
